components/VisualiserLayersControl.module.css
.optionsToggleButtonContainer {
    top: 0.5em;
    right: 3em;
}

.optionsToggleButtonContainerOptionsVisible {
    background: rgba(0, 0, 0, 0.3);
}

.optionsToggleButtonContainerOptionsVisible:hover {
    background: rgba(0, 0, 0, 0.5);
}

.optionsToggleButtonContainerOptionsVisible > button {
    background: #fdfdfd89;
    color: #000;
}

.optionsToggleButtonContainerOptionsVisible > button:hover,
.optionsToggleButtonContainerOptionsVisible > button:focus {
    background: #fdfdfd89;
}

.optionsContainer {
    background: #fdfdfdcb;
    position: absolute;
    top: 3vw !important;
    right: 3vw !important;
    padding: 0.5em 0.75em;
    border-radius: 4px;
    box-shadow: 0 0.25em 1em rgba(0, 0, 0, 0.2);
    width:50vw !important;
    height:50vh !important;
}

.radioGroup {
    font-size: 0.85em;
    padding: 0 0.5em;
    max-height: 50%;
    overflow-y: auto;
}

.radioGroup > :global(label.bp3-label) {
    font-weight: bold;
    position: sticky;
    z-index: 1;
    top: 0;
    padding: 0.25em 0;
    margin: 0 -0.5em;
    background:  #fdfdfd89;
}

.radioGroup > :global(label.bp3-label),
.radioGroup > :global(label.bp3-control) {
    margin-bottom: 0.5em;
}


@media only screen and  (max-width: 1600px) {
    .optionsContainer {
      right: 4vw !important;
    }
   }
@media only screen and  (max-width: 1000px) {
    .optionsContainer {
      right: 12vw !important;
      height: 60vw !important;
    }
   }
@media only screen and  (max-width: 600px) {
    .optionsContainer {
      width: 100vw !important;
      height: 80vw !important;
    }
   }

